<package>
  <name>rviz_waypoint_plugin</name>
  <version>0.10.3</version>
  <description>
     RViz plugin to create terminating waypoints.
  </description>
  <maintainer email="imar759@aucklanduni.ac.nz">Igor Markovic</maintainer>
  <license>BSD</license>

  <url>todo</url>
  <author>Igor Markovic</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
